# glui

./: .gitignore  Cargo.toml  README.md  performance.txt
shaders/: frag.glsl  vert.glsl
src/: bin.rs  ecs.rs  graphics.rs  gui.rs  lib.rs  main.rs  mecs.rs  tools.rs
src/graphics/: draw_resources.rs  draw_shader_selector.rs  indices.rs  render_command.rs  render_sequence.rs
src/gui/: align.rs  callback.rs  context.rs  draw.rs  elements.rs  font.rs  glutinwin.rs  gui_builder.rs  macros.rs  post_box.rs  transforms.rs  widget.rs  widget_layout_builder.rs  widget_list.rs  widget_parser.rs
src/mecs/: actor.rs  component.rs  components.rs  entity.rs  glutin_cont.rs  glutin_util.rs  glutin_win.rs  glutinwin.rs  message.rs  message_channel.rs  message_loop_data.rs  render_pipeline.rs  render_target.rs  static_world.rs  system.rs  system_set.rs  systems.rs  world.rs
src/mecs/components/: body_component.rs  data_component.rs  draw_component.rs
src/mecs/systems/: draw_system.rs
src/tools/: buffer.rs  buffer_bind_target.rs  camera.rs  camera_controller.rs  camera_controllers.rs  camera_parameters.rs  cube_texture.rs  draw.rs  draw_mode.rs  font.rs  font_error.rs  font_loader.rs  font_loader_error.rs  framebuffer.rs  gltraits.rs  gpuclock.rs  indices.rs  linalg.rs  match_downcast.rs  matrix4.rs  mesh.rs  profiler.rs  rect.rs  serde_tools.rs  shader.rs  shader_error.rs  shadererr.rs  spline.rs  tex2d.rs  texture.rs  texture_2d.rs  uniform.rs  vao.rs  vector2.rs  vector2px.rs  vector3.rs  vector4.rs
test/glinfo/: Cargo.toml
test/gomoku/: Cargo.toml
(+7 files in other folders)
