[package]
name = "glui"
version = "0.1.0"

[lib]
name = "glui"
path = "src/lib.rs"

[[bin]]
name = "glui"
path = "src/bin.rs"

[features]
serializable = ["serde", "serde_json"]

[dependencies]
glutin = "0.24.0"
num = "0.2.1"
gl = "0.14.0"
image = "0.23.4"
glui_proc = { path = "../glui_proc" }
downcast-rs = "1.1.1"
unicode-normalization = "0.1.12"
rusttype = { version = "0.8.2", features = ["gpu_cache"] }
font-kit = "*"
pbr = "*"
prettytable-rs = "*"
bimap = "*"
match-downcast = "0.1.2"
maplit = "*"
serde = {version = "*", features = ["derive"], optional = true}
serde_json = {version = "*", optional = true}
rand = "*"
